--- a/src/2-form.html
+++ b/src/2-form.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/2-form.css">
 </head>
 <body>
+    <form class="feedback-form" autocomplete="off">
+        <label class="form-design-input">
+            Email
+            <input type="email" name="email" autofocus class="input"/>
+        </label>
+        <label class="form-design">
+            Message
+            <textarea name="message" rows="8" class="form-textarea"></textarea>
+        </label>
+        <button type="submit" class="form-btn">Submit</button>
+    </form>
     <script type="module" src="./js/2-form.js"></script>
 </body>
 </html>
